-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.0 RC, 6.9.0
-
Windows 10.0.19045.5487
12th Gen Intel(R) Core(TM) i5-12400
AMD Radeon RX 6400
MSVC v143 - VS 2022 C++ x64/86 build tools (v14.43-17.13)
-
-
7d1a2d5dc (130-based), 6d6970fd9 (130-based), 824eb0f3f (dev), f540e0d0b (6.9)
The stacktrace and webengine logs attached.
Crash appears with all RHI backends "d3d11"/"opengl"/"software" (via QSG_RHI_BACKEND).
Switching QTWEBENGINE_CHROMIUM_FLAGS="--disable-gpu" fixes crashes, the simplebrowser works.
Issue doesnt reproduce on Qt 6.8.2
- is duplicated by
-
QTBUG-135794 Cant run quicknanobrowser example with QT 6.9.0 with RDP session
-
- Reported
-
-
PYSIDE-3071 Qt WebEngine crashes on startup
-
- Closed
-
| For Gerrit Dashboard: QTBUG-134746 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 634034,4 | [fixup] Stop Chromium from using DirectComposition | 130-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
| 647650,2 | [fixup] Fix QtWebEngine build on Windows | 130-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
| 647651,2 | Add Windows specific driver information to compositor log | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 649274,2 | Add Windows specific driver information to compositor log | 6.9 | qt/qtwebengine | Status: MERGED | +2 | 0 |