[fixup] Stop Chromium from using DirectComposition

Speculative fix for SharedImageBackingFactory failure on Windows.
This avoids another check for DirectComposition support that is likely
to blame for D3DImageBackingFactory reporting itself as unsupported
on certain systems.

Task-number: QTBUG-134746
Change-Id: Icff5482a65c3f53e53231e4b72ab11f4c526d5fe
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/634034
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>